--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>Youtube-Clone</title>
+    <title>Youtube-Clone-AASM</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
